# rdp-tutorial

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
certs/: certs.cfg
data-sync-service/: config.yml
frequency-data-service/: Dockerfile  config.yml
frequency-data-service/src/: frequency_data_crawler.py
grafana/dashboards/: dashboard.yml
grafana/dashboards/RDP Tutorial Dashboard/: frequency-measurements.json  weather-forecast.json
grafana/provisioning/dashboards/RDP Tutorial Dashboard/: frequency-measurements.json  pv-forecast.json  weather-forecast.json
grafana/provisioning/datasources/: datasource.yml
pv-sim-service/: Dockerfile  config.yml
pv-sim-service/src/: pyproject.toml
pv-sim-service/src/pv_sim/: __main__.py  pv_system_sim.py  util.py
weather-data-service/: config.yml
